syntax = "proto3";

package ark.v1;

/* Types */

message Outpoint {
  string txid = 1;
  uint32 vout = 2;
}

message Input {
  Outpoint outpoint = 1;
  Tapscripts taproot_tree = 2;
}

message Output {
  string address = 1; // onchain or off-chain
  uint64 amount = 2; // Amount to send in satoshis.
}

message Vtxo {
  Outpoint outpoint = 1;
  uint64 amount = 2;
  string script = 3;
  int64 created_at = 4;
  int64 expires_at = 5;
  string commitment_txid = 6;
  bool preconfirmed = 7;
  bool swept = 8;
  bool redeemed = 9;
  bool spent = 10;
  string spent_by = 11;
}

message TxNotification {
  string txid = 1;
  repeated Vtxo spent_vtxos = 2;
  repeated Vtxo spendable_vtxos = 3;
  string hex = 5;
}

message Tapscripts {
  repeated string scripts = 1;
}

message Bip322Signature {
  string signature = 1;
  string message = 2;
}

message MarketHour {
  int64 next_start_time = 1;
  int64 next_end_time = 2;
  int64 period = 3;
  int64 round_interval = 4;
}

/* Events */

message BatchStartedEvent {
  string id = 1;
  repeated string intent_id_hashes = 2;
  int64 batch_expiry = 3;
}

message BatchFinalizationEvent {
  string id = 1;
  string commitment_tx = 2;
  // vtxo outpoint encoded as string -> connector outpoint
  map<string, Outpoint> connectors_index = 3;
}

message BatchFinalizedEvent {
  string id = 1;
  string commitment_txid = 2;
}

message BatchFailed {
  string id = 1;
  string reason = 2;
}

message TreeSigningStartedEvent {
  string id = 1;
  repeated string cosigners_pubkeys = 2;
  string unsigned_commitment_tx = 3;
}

message TreeNoncesAggregatedEvent {
  string id = 1;
  string tree_nonces = 2;
}

message TreeTxEvent {
  string id = 1;
  repeated string topic = 2;
  int32 batch_index = 3;
  string txid = 4;
  string tx = 5;
  map<uint32, string> children = 6; // output index -> child txid
}

message TreeSignatureEvent {
  string id = 1;
  repeated string topic = 2;
  int32 batch_index = 3;
  string txid = 4;
  string signature = 5;
}